Curve path messed up #40694

Closed
opened 2014-06-18 21:54:41 +02:00 by holy enigma · 9 comments

System Information
Windows 8.1 geforce 8600gt

Blender Version
Broken: 2.71 8c16f4c windows 64bit buildbot
Worked: (optional)

Short description of error
add a curve path and its looks all screwy, if you delete end curve point it fixes it.
Capture.JPG

Exact steps for others to reproduce the error
add curve path

**System Information** Windows 8.1 geforce 8600gt **Blender Version** Broken: 2.71 8c16f4c windows 64bit buildbot Worked: (optional) **Short description of error** add a curve path and its looks all screwy, if you delete end curve point it fixes it. ![Capture.JPG](https://archive.blender.org/developer/F94685/Capture.JPG) **Exact steps for others to reproduce the error** add curve path
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @holyenigma

Added subscriber: @holyenigma

Added subscriber: @mont29

Added subscriber: @mont29

Ugh… This looks ugly :/

Ugh… This looks ugly :/

Gah, sorry, not in 2.71.

Issue is with commit 4b4bb410e0.

Gah, sorry, not in 2.71. Issue is with commit 4b4bb410e0.

This issue was referenced by 4bf8b04025

This issue was referenced by 4bf8b04025ce7b75957e9780776344e06f24e627

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit 4bf8b04025.

Closed by commit 4bf8b04025.
Author

thanks that was fast service! :)
good job.

thanks that was fast service! :) good job.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#40694
No description provided.